# module-6-Afifpip

./: README.md  pyproject.toml
app/: __init__.py
app/controller/animal/: animal_route.py
app/controller/animal/schema/: create_animal_request.py  update_animal_request.py
app/controller/employee/: employee_route.py
app/controller/employee/schema/: create_employee_request.py  update_employee_request.py
app/models/: animal.py  employee.py
app/repositories/: animal_repo.py  employee_repo.py
app/route/: employee_route.py
app/service/: animal_service.py  employee_service.py
python-flask-revou/: .env
python-flask-revou/app/: __init__.py
python-flask-revou/app/models/: animal.py
python-flask-revou/app/route/: animal_route.py
tests/: conftest.py
tests/controller/: test_animal_controller.py  test_employee_controller.py
tests/service/: test_animal_service.py  test_employee_service.py
tests/utils/: test_api_response.py
