[tool.poetry]
name = "module-6-afifpip"
version = "0.1.0"
description = ""
authors = ["Afifpip <afif.firfik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
poetry-dotenv-plugin = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
