[tool.poetry]
name = "module-6-afifpip"
version = "0.1.0"
description = ""
authors = ["Afifpip <afif.firfik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
poetry-dotenv-plugin = "^0.2.0"
flask-migrate = "^4.0.5"
pydantic = "^2.6.1"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
flask-swagger-ui = "^4.11.1"
flask-restx = "^1.3.0"
pytest-mock = "^3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
